--- a/public/css/main.css
+++ b/public/css/main.css
@@ -21,7 +21,7 @@ body {
     background-size: 40%;
     max-width: 40em;
     margin: 0em auto;
-    padding: 1px 1em 10em;
+    padding: 1px 1em 4em;
     box-shadow: 0 0 10px 2px rgba(0,0,0,0.5);
     text-align: center;
 }
@@ -57,12 +57,21 @@ h2 {
     display: inline-block;
     text-decoration: none;
     color: white;
-    font-weight: 50
+    font-family: 'Museo-500';
+    border: none;
+}
+
+.footer {
+    justify-content: space-between;
 }
 
 /**
  * Formulaire
  */
+
+.formulaire {
+    margin-top: 1em;
+}
 
 .formulaire label {
     display: block;
@@ -73,15 +82,17 @@ h2 {
     margin-right: 1ex;
 }
 
-.formulaire input {
-
-}
-
 .bouton-envoyer {
 }
 
+.erreur, .succes {
+    font-family: Museo-500;
+    color: white;
+    padding: 1ex;
+}
+
 .erreur {
-    background: #ff7878;
+    background: #e64141;
 }
 
 .succes {
